--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,7 +125,7 @@ services:
   elasticsearch:
     hostname: elasticsearch
     container_name: elasticsearch
-    image: elasticsearch
+    image: elasticsearch:6.8
     environment:
       ES_JAVA_OPTS: -Xms512m -Xmx512m
       TZ: 'Asia/Shanghai'
