--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,6 +134,7 @@ services:
       - "9200:9200"
     volumes:
       - ./elasticsearch/data:/usr/share/elasticsearch/data:z
+      - ./elasticsearch/config:/usr/share/elasticsearch/config:z
     networks:
       - backend
     restart: always
