--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,8 +133,8 @@ services:
     ports:
       - "9200:9200"
     volumes:
-      - ./elasticsearch/data:/usr/share/elasticsearch/data:z
-      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
+      - ./elasticsearch/data:/usr/share/elasticsearch/data
+      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       # - ./elasticsearch/config:/usr/share/elasticsearch/config:z
     networks:
       - backend
