--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,7 +134,7 @@ services:
     ports:
       - "9200:9200"
     volumes:
-      - ./elasticsearch:/usr/share/elasticsearch:z
+      - ./elasticsearch/data:/usr/share/elasticsearch:z
     networks:
       - backend
     restart: always
