--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,7 +134,9 @@ services:
     ports:
       - "9200:9200"
     volumes:
-      - ./elasticsearch/data:/usr/share/elasticsearch:z
+      - ./elasticsearch/data:/usr/share/elasticsearch/data:z
+      # - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
+      # - ./elasticsearch/config:/usr/share/elasticsearch/config:z
     networks:
       - backend
     restart: always
