--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
 
   php73:
     hostname: php73
-    build: ./supervisor
+    build: ./php
     container_name: php73
     ports:
       - "9000:9000"
@@ -65,17 +65,32 @@ services:
       - ./php/php-fpm.conf:/usr/local/php/etc/php-fpm.conf
       - ./php/www.conf:/usr/local/php/etc/php-fpm.d/www.conf
       - ./php/log/:/usr/local/php/var/log/
-      - ./supervisor/supervisord.conf:/etc/supervisor/supervisord.conf
-      - ./supervisor/conf.d:/etc/supervisor/conf.d
-      - ./supervisor/log:/var/log/supervisor
     working_dir: /var/www/html
     restart: always
-    command: >
-        bash -c "supervisord -s -c /etc/supervisor/supervisord.conf && php-fpm"
     environment:
       TZ: 'Asia/Shanghai'
     networks:
-      - backend      
+      - backend
+
+  supervisor:
+    hostname: supervisor
+    build: ./supervisor
+    container_name: supervisor
+    expose:
+      - "9000"
+    volumes:
+      - ./supervisor/supervisord.conf:/etc/supervisor/supervisord.conf
+      - ./supervisor/conf.d:/etc/supervisor/conf.d
+      - ./supervisor/log:/var/log/supervisor
+      - /var/www/html:/var/www/html
+    working_dir: /etc/supervisor/conf.d
+    restart: always
+    command: >
+      bash -c "supervisord -s -c /etc/supervisor/supervisord.conf && php-fpm"
+    environment:
+      TZ: 'Asia/Shanghai'
+    networks:
+      - backend
   
   php8:
     build: ./php8
@@ -108,9 +123,6 @@ services:
       - ./php/php-fpm.conf:/usr/local/php/etc/php-fpm.conf
       - ./php/www.conf:/usr/local/php/etc/php-fpm.d/www.conf
       - ./php/log/:/usr/local/php/var/log/
-      - ./supervisor/supervisord.conf:/etc/supervisor/supervisord.conf
-      - ./supervisor/conf.d:/etc/supervisor/conf.d
-      - ./supervisor/log:/var/log/supervisor
     working_dir: /var/www/html
     restart: always
     environment:
