--- a/supervisor/Dockerfile
+++ b/supervisor/Dockerfile
@@ -1,40 +1,60 @@
 
-FROM php:7.3-fpm
+FROM php:8.2-fpm
+# FROM php:8.1-fpm
 
 MAINTAINER jybtx <admin@jybtx.com>
 
-RUN export CFLAGS="PHP_CPPFLAGS" LDFLAGS="$PHP_LDFLAGS"
-
-# COPY sources.list /etc/apt
-
 RUN  sed -i s@/archive.ubuntu.com/@/mirrors.aliyun.com/@g /etc/apt/sources.list
 RUN  sed -i s@/security.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list
-RUN  sed -i s@/deb.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list && apt-get clean
+RUN  sed -i s@/deb.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list && apt-get clean && \
 
-
-RUN set -x && \
+# 安装基础
+  set -x && \
   apt-get update -y && \
   apt-get upgrade -y && \
   apt-get update && \
-  apt-get install -y --no-install-recommends libfreetype6-dev libjpeg62-turbo-dev libpng-dev libxml2-dev libtidy-dev libxslt1-dev libmagickwand-dev libmcrypt-dev libzip-dev libmemcached-dev supervisor vim git redis procps && \
-  rm -r /var/lib/apt/lists/* && \  
-  pecl install imagick mcrypt && \
-  docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
-  docker-php-ext-install -j$(nproc) gd soap wddx xmlrpc tidy xsl zip bcmath calendar exif sockets pdo_mysql pcntl && \
-  docker-php-ext-enable imagick mcrypt && \
+  apt-get install -y --no-install-recommends libicu-dev libmemcached-dev libz-dev libpq-dev libzip-dev libonig-dev libjpeg62-turbo-dev libjpeg-dev libpng-dev libfreetype6-dev libssl-dev libmcrypt-dev libtidy-dev libxslt1-dev libmagickwand-dev supervisor zlib1g-dev libxml2-dev libbz2-dev graphviz procps default-mysql-client && \
+
+  rm -rf /var/lib/apt/lists/* && \
+
+# 安装PHP扩展
+  docker-php-ext-configure bcmath --enable-bcmath \
+  && docker-php-ext-configure pcntl --enable-pcntl \
+  && docker-php-ext-configure pdo_mysql --with-pdo-mysql \
+  && docker-php-ext-configure mbstring --enable-mbstring \
+  && docker-php-ext-configure soap --enable-soap \
+  && docker-php-ext-configure exif --enable-exif \
+  && docker-php-ext-install bcmath intl mbstring mysqli pcntl pdo_mysql sockets zip soap exif \
+  && docker-php-ext-install opcache \
+  && docker-php-ext-enable opcache && \
+  docker-php-ext-configure gd --with-jpeg=/usr/lib --with-freetype=/usr/include/freetype2 && \
+  docker-php-ext-install gd && \
+# 安装 Redis 扩展
+  pecl install -o -f redis && docker-php-ext-enable redis && \
+
+# 安装 grpc 扩展
+# pecl install -o -f grpc && docker-php-ext-enable grpc && \
+
+# 安装 protobuf 扩展
+# pecl install -o -f protobuf  && docker-php-ext-enable protobuf && \
+
+# 安装 imagick 扩展
+pecl install -o -f imagick && docker-php-ext-enable imagick && \
 
 # 安装 memcached 扩展
-pecl install memcached  && docker-php-ext-enable memcached && \
-# 安装 redis 扩展
-pecl install redis && docker-php-ext-enable redis && \
+pecl install -o -f memcached  && docker-php-ext-enable memcached && \
+
 # 安装 swoole 扩展
-pecl install swoole-4.8.12 && docker-php-ext-enable swoole && \
+pecl install -o -f swoole && docker-php-ext-enable swoole && \
 # 清除安装文件
 apt-get clean && \
 # 删除php源码，有助于减小生成的镜像大小
 docker-php-source delete
 
-
+# 安装 Composer
 RUN curl -sS https://getcomposer.org/installer | php \
    && mv composer.phar /usr/local/bin/composer \
    && composer config -g repo.packagist composer https://packagist.org
+
+
+
